tests/ui/traits/next-solver/unsize-goal-mismatch.current.stderr
error[E0283]: type annotations needed: cannot satisfy `Self: Super<'a>`
  --> $DIR/unsize-goal-mismatch.rs:11:18
   |
LL | trait Trait<'a>: Super<'a> + for<'hr> Super<'hr> {}
   |                  ^^^^^^^^^
   |
note: multiple `impl`s or `where` clauses satisfying `Self: Super<'a>` found
  --> $DIR/unsize-goal-mismatch.rs:10:1
   |
LL | trait Super<'a> {}
   | ^^^^^^^^^^^^^^^
LL | trait Trait<'a>: Super<'a> + for<'hr> Super<'hr> {}
   |                              ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
